--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nithin-shetty22.github.io/calorie_chefs",
+  "homepage": "https://karthu181.github.io/calorie_chefs",
   "name": "calorie_chefs",
   "version": "0.1.0",
   "private": true,
